WIP. app. fix tailwind dark mode switch; now on html document

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply text-primary-700 dark:text-primary-100 bg-primary-100 dark:bg-primary-800;
+}
